--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="CryptoScope: Track cryptocurrency prices and trends with dynamic charts.">
+  <meta name="keywords" content="cryptocurrency, crypto prices, charts, blockchain">
   <title>CryptoScope</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <div class="container">
     <h1 class="title">CryptoScope</h1>
-    <input
-      type="text"
-      id="search-bar"
-      placeholder="Search Cryptocurrency"
-    />
+    <input type="text" id="search-bar" placeholder="Search Cryptocurrency" aria-label="Search Cryptocurrency">
     <div id="coins-container" class="coins-container">
       <!-- Coins and charts will be dynamically added here -->
     </div>
   </div>
+
   <footer>
-    &copy; 2025 CryptoScope. All rights reserved.
+    <p>&copy; 2025 CryptoScope. All rights reserved. Built with ❤️ by FARZAIN SALEEM</p>
+    <p>
+      Follow us on:
+      <a href="https://www.linkedin.com/in/farzain-saleem-8ab5a2265?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
+    </p>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
+
