--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="CryptoScope: Track cryptocurrency prices and trends with dynamic charts.">
-  <meta name="keywords" content="cryptocurrency, crypto prices, charts, blockchain">
   <title>CryptoScope</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -14,7 +12,7 @@
 
   <div class="container">
     <h1 class="title">CryptoScope</h1>
-    <input type="text" id="search-bar" placeholder="Search Cryptocurrency" aria-label="Search Cryptocurrency">
+    <input type="text" id="search-bar" placeholder="Search Cryptocurrency">
     <div id="coins-container" class="coins-container">
       <!-- Coins and charts will be dynamically added here -->
     </div>
@@ -31,4 +29,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
